// Vitest Snapshot v1

exports[`renders error type 1`] = `
<dialog class="error" data-testid="overlay" data-v-889cac1d="" open="">
  <div class="wrapper" data-v-889cac1d="">
    <!--v-if--><br data-testid="icon" icon="[object Object]" data-v-889cac1d="">
    <!--v-if-->
    <!--v-if-->
    <!--v-if--><span class="message" data-v-889cac1d="">Look at me now</span>
  </div>
</dialog>
`;

exports[`renders info type 1`] = `
<dialog class="info" data-testid="overlay" data-v-889cac1d="" open="">
  <div class="wrapper" data-v-889cac1d="">
    <!--v-if-->
    <!--v-if-->
    <!--v-if--><br data-testid="icon" icon="[object Object]" data-v-889cac1d="">
    <!--v-if--><span class="message" data-v-889cac1d="">Look at me now</span>
  </div>
</dialog>
`;

exports[`renders loading type 1`] = `
<dialog class="loading" data-testid="overlay" data-v-889cac1d="" open="">
  <div class="wrapper" data-v-889cac1d=""><i data-v-47e95701="" data-v-889cac1d=""><span data-v-47e95701=""></span><span data-v-47e95701=""></span><span data-v-47e95701=""></span></i>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if--><span class="message" data-v-889cac1d="">Look at me now</span>
  </div>
</dialog>
`;

exports[`renders success type 1`] = `
<dialog class="success" data-testid="overlay" data-v-889cac1d="" open="">
  <div class="wrapper" data-v-889cac1d="">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if--><br data-testid="icon" icon="[object Object]" data-v-889cac1d=""><span class="message" data-v-889cac1d="">Look at me now</span>
  </div>
</dialog>
`;

exports[`renders warning type 1`] = `
<dialog class="warning" data-testid="overlay" data-v-889cac1d="" open="">
  <div class="wrapper" data-v-889cac1d="">
    <!--v-if-->
    <!--v-if--><br data-testid="icon" icon="[object Object]" data-v-889cac1d="">
    <!--v-if-->
    <!--v-if--><span class="message" data-v-889cac1d="">Look at me now</span>
  </div>
</dialog>
`;
